# Claude-Code-Interceptor

./: .coverage  .gitignore  CHANGES.md  Makefile  README.md  all_funcs.md  cci.py  pyproject.toml
cci/: __main__.py  config.py  tui.py
cci/utils/: display.py  models_fetch.py  version.py
claude_code_intercept/: __main__.py  config.py  tui.py
claude_code_intercept/utils/: config_utils.py  display.py  models_fetch.py
tests/: test_config.py  test_config_utils.py  test_display.py  test_main.py  test_models_fetch.py  test_tui.py  test_version.py
tests/fixtures/: models_response.json
